src/test/deca/extension/context/invalid/test_type_incompatible_declaration.deca
// Description:
// Test la mauvaise déclaration de tableau
// Resultats:
//  TEST pas valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    int[][] tableauInt = new float[5][6];
}
